--- a/assets/css/usuario-style.css
+++ b/assets/css/usuario-style.css
@@ -609,3 +609,101 @@
 .curtidas .aviso a{
   color: var(--color-purple);
 }
+
+/* SEGUIDORES */
+
+.segueTitulo{
+  width: 100%;
+  display: flex;
+  height: 5rem;
+  align-items: center;
+  padding: var(--card-padding);
+  padding-bottom: 0;
+
+}
+
+.segueHolder{
+  width: 100%;
+  height: 725px;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  padding: var(--card-padding);
+  gap: 1rem;
+
+}
+
+.segueHolder::-webkit-scrollbar {
+  display: none;
+}
+
+
+
+.usuarioSegue{
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  align-items: center;
+  padding: var(--card-padding);
+  border-radius: var(--card-border-radius);
+
+}
+
+.usuarioSegue:hover{
+  background: rgba(0, 0, 0, 0.068);
+}
+
+.usuarioSegue .fotoDePerfil{
+  width: 6rem;
+  border: none;
+}
+
+.usuarioSegue .biografia{
+  width: 29rem;
+  font-family: 'Raleway Medium', sans-serif;
+}
+
+.usuarioSegue .btn{
+  width: 6rem;
+  font-family: 'Raleway Bold';
+}
+
+.usuarioSegue .loginEUser{
+  display: flex; 
+  flex-direction: column; 
+  color: black;
+}
+
+.usuarioSegue .loginEUser h4, .usuarioSegue .loginEUser h3{
+  width: 21rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.usuarioSegue .seguidor h5{
+  font-family: 'Raleway Medium';
+  background: rgba(7, 7, 7, 0.050);
+  border-radius: 11px;
+  color: black;
+  width: 6rem;
+  height: 1.5rem;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+#modal-seguindo, #modal-seguidores{
+  width: 630px !important;
+}
+
+
+.seguidor{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.8rem;
+  width: 100%;
+}
