--- a/assets/css/feed-style.css
+++ b/assets/css/feed-style.css
@@ -899,6 +899,20 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
   margin-left: 1rem;
 }
 
+.meio .feed .ahrefVermais{
+  margin: 0 0.6rem;
+  background: none;
+  cursor: pointer;
+  font-family: 'Raleway Bold', sans-serif;
+  border-bottom: 1px transparent solid;
+  transition: all 300ms ease;
+}
+.meio .feed .ahrefVermais:hover{
+  color: var(--color-purple);
+  border-bottom: 1px solid var(--color-purple);
+}
+
+
 .meio .feed .botoes .botoesDeInteracao button.mensagem {
   background-image: url("../images/botaoMensagem.svg");
 
@@ -1953,14 +1967,14 @@ z-index: 1;
 }
 
 .contagemChar {
-
   display: flex;
-  width: 100%;
-  justify-content:space-between ;
-  padding: var(--card-padding);
+  width: 95%;
+  justify-content: space-between;
   align-items: center;
-
   cursor: default;
+  position: absolute;
+  bottom: 10px;
+  right: 15px;
 }
 
 .parte1CriarPost .contagemChar input {
@@ -1978,7 +1992,7 @@ z-index: 1;
 }
 
 .contagemCharInput {
-  width: 0.8rem;
+  width: 1.5rem;
   right: 0;
   top: 3rem;
   font-weight: 700;
@@ -2503,6 +2517,7 @@ z-index: 1;
   margin-top: 20px;
   box-shadow: 1px 1px 10px 0px #696969c2;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 #resultadoBuscaAtual {
