--- a/assets/css/opcoes-style.css
+++ b/assets/css/opcoes-style.css
@@ -314,4 +314,14 @@ outline: 1px solid gray;
 }
 
 
+.textoCerto {
+  margin: 7px 0 0 0;
+  font-family: "Raleway Bold", sans-serif;
+  color: #3837a1;
+}
 
+.textoErrado {
+  margin: 7px 0 0 0;
+  font-family: "Raleway Bold", sans-serif;
+  color: #db310c;
+}
