--- a/assets/css/feed-style.css
+++ b/assets/css/feed-style.css
@@ -847,6 +847,17 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
   color: var(--color-dark);
 }
 
+.tipoPub {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#spanTipoPub {
+  border: 1px solid var(--color-purple);
+  border-radius: 20px;
+  padding: 5px 12px;
+}
 
 .meio .feed .usuario {
   display: flex;
@@ -899,7 +910,7 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
   margin-left: 1rem;
 }
 
-.meio .feed .ahrefVermais{
+.meio .feed .ahrefVermais {
   margin: 0 0.6rem;
   background: none;
   cursor: pointer;
@@ -907,7 +918,8 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
   border-bottom: 1px transparent solid;
   transition: all 300ms ease;
 }
-.meio .feed .ahrefVermais:hover{
+
+.meio .feed .ahrefVermais:hover {
   color: var(--color-purple);
   border-bottom: 1px solid var(--color-purple);
 }
@@ -1467,7 +1479,7 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
 #form-aid textarea {
   resize: none;
   width: 410px;
-  height: 155px;
+  height: 120px;
   border: none;
   padding: 0 20px 0 20px;
 
@@ -1490,12 +1502,12 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
   line-height: 19px;
 }
 
-#checkImp{
+#checkImp {
   display: none;
 }
 
-#checkImp + label:before {
-  content: "\e098"; 
+#checkImp+label:before {
+  content: "\e098";
   font: var(--fa-font-solid);
   cursor: pointer;
   margin-left: 1rem;
@@ -1503,8 +1515,8 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
 }
 
 
-#checkImp:checked + label:before {
-  content: "\e098"; 
+#checkImp:checked+label:before {
+  content: "\e098";
   font: var(--fa-font-solid);
   color: var(--color-purple);
 }
@@ -1517,35 +1529,42 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
     -webkit-transform: translateY(-8px);
     transform: translateY(-8px);
   }
+
   50% {
     -webkit-transform: translateY(-4px);
     transform: translateY(-4px);
   }
+
   100% {
     -webkit-transform: translateY(-8px);
     transform: translateY(-8px);
   }
 }
+
 @keyframes hvr-bob {
   0% {
     -webkit-transform: translateY(-8px);
     transform: translateY(-8px);
   }
+
   50% {
     -webkit-transform: translateY(-4px);
     transform: translateY(-4px);
   }
+
   100% {
     -webkit-transform: translateY(-8px);
     transform: translateY(-8px);
   }
 }
+
 @-webkit-keyframes hvr-bob-float {
   100% {
     -webkit-transform: translateY(-8px);
     transform: translateY(-8px);
   }
 }
+
 @keyframes hvr-bob-float {
   100% {
     -webkit-transform: translateY(-8px);
@@ -1560,7 +1579,10 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
   transform: perspective(1px) translateZ(0);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
 }
-.hvr-bob:hover, .hvr-bob:focus, .hvr-bob:active {
+
+.hvr-bob:hover,
+.hvr-bob:focus,
+.hvr-bob:active {
   -webkit-animation-name: hvr-bob-float, hvr-bob;
   animation-name: hvr-bob-float, hvr-bob;
   -webkit-animation-duration: .3s, 1.5s;
@@ -1859,7 +1881,7 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
   display: flex;
 }
 
-.menuComent{
+.menuComent {
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -1875,26 +1897,26 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
   gap: 0.6rem;
 }
 
-.menuComentElement{
-width: fit-content;
-display: flex;
-gap: 0.5rem;
-align-items: center;
-justify-content: start;
-width: 100%;
-font-size: 1rem;
-cursor: pointer;
-z-index: 1;
+.menuComentElement {
+  width: fit-content;
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  justify-content: start;
+  width: 100%;
+  font-size: 1rem;
+  cursor: pointer;
+  z-index: 1;
 }
 
 
 
 
-.comentarios .commentEllipsis{
+.comentarios .commentEllipsis {
   cursor: pointer;
 }
 
-.comentarios .commentEllipsis:hover{
+.comentarios .commentEllipsis:hover {
   color: #464bc9;
 }
 
@@ -2549,8 +2571,8 @@ z-index: 1;
 
 
 .spanUsuariosEncontrados {
-font-size: 1.1rem;
-margin-bottom: 0.5rem;
+  font-size: 1.1rem;
+  margin-bottom: 0.5rem;
 }
 
 .icon-tipo-pesquisa {
@@ -2560,24 +2582,24 @@ margin-bottom: 0.5rem;
   justify-content: space-around;
 }
 
-.cardResultadoPesquisa{
+.cardResultadoPesquisa {
   display: flex;
   flex-direction: column;
   height: 21rem;
   width: 100%;
 }
 
-.cardResultadoPesquisa:last-child{
+.cardResultadoPesquisa:last-child {
   padding-bottom: 1rem;
 }
 
 
 
-#resultadoBuscaAtual:hover{
+#resultadoBuscaAtual:hover {
   background: rgba(0, 0, 0, 0.068);
 }
 
-#infoResultadoUsuarios{
+#infoResultadoUsuarios {
   padding-left: 0.5rem;
   display: flex;
   flex-direction: column;
@@ -2586,14 +2608,14 @@ margin-bottom: 0.5rem;
 
 
 
-.modal-denuncia-comentario-elements{
+.modal-denuncia-comentario-elements {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.modal-denuncia-comentario-elements form{
+.modal-denuncia-comentario-elements form {
   display: flex;
   flex-direction: column;
   justify-content: center;
