--- a/assets/css/feed-style.css
+++ b/assets/css/feed-style.css
@@ -1031,7 +1031,11 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
 .meio .badge-categoria {
   border: 1px solid var(--color-purple);
   border-radius: 20px;
-  padding: 5px 12px;
+  display: flex;
+  align-items: center;
+  height: 2rem;
+  justify-content: center;
+  padding: 0 12px;
   cursor: pointer;
 }
 
@@ -1104,9 +1108,10 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
   height: fit-content;
   max-height: 17.5rem;
   overflow: hidden;
-  width: 100%;
   margin-bottom: 1.5rem;
-  justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .ladoDireito .sugestoes {
@@ -1116,29 +1121,27 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
 .ladoDireito .whiteBoxHolder .heading h4 {
   font-size: 1.1rem;
   font-family: "Raleway Extra Bold";
-  margin-bottom: 1rem;
+
 }
 
 .ladoDireito .whiteBoxHolder .postsPerdidos {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin: 1.1rem 0;
   width: 100%;
-  height: 2.5rem;
-  margin-bottom: 2.5rem;
+  height: 3.5rem;
+  gap: 1rem;
 }
 
 
 
 .ladoDireito .whiteBoxHolder .postsPerdidos .fotoDePerfil {
-  width: 4rem;
-  cursor: pointer;
+display: flex;
+border: none;
 }
 
 .ladoDireito .whiteBoxHolder .postsPerdidos .infoPostPerdidos {
-  margin: 0 0.7rem;
-  width: 100%;
+  width: 16.8rem;
   overflow: hidden;
   cursor: pointer;
 }
@@ -1952,6 +1955,10 @@ main .container .ladoEsquerdo .perfilAtivo h4 {
 
 #denunciarCor {
   color: #DB310C;
+}
+
+.hrefCor{
+  color: var(--color-purple);
 }
 
 .excluirPost {
