--- a/assets/css/usuario-style.css
+++ b/assets/css/usuario-style.css
@@ -1,5 +1,31 @@
 
+  :root {
+    --color-white: #FFFFFF;
+    --color-dark: rgba(0, 0, 0, 1);
+    --color-pastelDark: #202225;
+    --color-lightGray: #f5f5f5;
+    --color-extraLightGray: rgba(245, 245, 245, 1);
+    --color-gray: rgba(86, 86, 86, 1);
+    --color-lightPastelGray: #C1C1C1;
+    --color-light: rgba(224, 224, 224, 1);
   
+    --color-purple: rgba(56, 55, 161, 1);
+    --color-lightPurple: #9998D3;
+    --color-lightBlue: rgba(186, 213, 219, 1);
+    --color-pastelYellow: rgba(255, 251, 159, 1);
+    --color-pastelOrange: rgba(251, 211, 164, 1);
+  
+  
+    --border-radius: 2rem;
+    --card-border-radius: 1rem;
+    --btn-padding: 0.6rem 1rem;
+    --search-padding: 0.6rem 1rem;
+    --card-padding: 1rem;
+  
+    --sticky-top-left: 6.4rem;
+    --sticky-top-right: -18rem;
+  }
+
   /* perfil do usuario */
 
   .perfilUsuario main .container{
@@ -27,7 +53,7 @@
     content: "";
     width: 100%;
     height: 1px;
-    background: #C1C1C1;
+    background: gray;
     position: absolute;
     bottom: 0;
 
@@ -457,7 +483,7 @@
   .meio .bio{
     height: fit-content;
     max-height: 57px;
-    width: 30rem;
+    width: 40rem;
     
   }
 
@@ -465,6 +491,31 @@
     overflow-wrap: break-word;
   }
 
+  .meio .addSerPro{
+  height: 60px;
+  width: 100%;
+  border: 1px solid var(--color-lightPastelGray);
+  border-radius: var(--card-border-radius);
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  transition: all 300ms ease;
+}
+
+.meio .addSerPro:hover{
+  background:rgb(244, 244, 244);
+}
+
+
+.meio .addSerPro h4{
+  font-size: 1.2rem;
+}
+
+.meio .addSerPro .addSerProImg{
+  width: 2.4rem;
+}
 
   .meio .userTabs{
     display: flex;
@@ -579,7 +630,7 @@
   grid-template-columns: 33% 33% 33%;
   row-gap: 2rem;
   height: fit-content;
-  min-height: 15rem;
+  min-height: 40rem;
 }
 
 .produtos{
@@ -744,4 +795,11 @@
 #modal-servico-produto form input[type = "submit"]{
   width: 80px;
   height: 30px;
+}
+
+.previewPostImage{
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
 }
