--- a/assets/css/usuario-style.css
+++ b/assets/css/usuario-style.css
@@ -30,10 +30,374 @@
   /* perfil do usuario */
 
   .perfilUsuario main .container{
-
   grid-template-columns: 18vw auto 10vw;
 
 }
+
+  .meio .userArea {
+    background: var(--color-white);
+    border-radius: var(--card-border-radius);
+    padding: var(--card-padding);
+    height: 100%;
+  }
+
+  .meio .userHandle {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    padding-bottom: 1rem;
+  }
+
+  .meio .userHandle::after{
+    content: "";
+    width: 100%;
+    height: 1px;
+    background: gray;
+    position: absolute;
+    bottom: 0;
+
+  }
+  .userCima {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .meio .userCima .fotoDePerfil{
+    width: 9rem;
+  }
+
+  .meio .userInfo{
+    margin: 0 1.5rem;
+    display: flex;
+    width: 40rem;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  .meio .infoHolder {
+    display: flex;
+    width: 100%;
+    gap: 2rem;
+  }
+
+
+
+  .meio .infoHolder a{
+
+    font-family: 'Raleway Bold', sans-serif;
+    color: var(--color-purple);
+    font-weight: 900;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .meio .infoHolder h4{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .meio .topo{
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+  }
+
+  .meio .topo .btn{
+    color: var(--color-dark);
+    padding-inline: 1.2rem;
+    font-family: 'Raleway Bold', sans-serif;
+    font-weight: 900;
+    box-shadow: 0px 5px 15px rgb(0 0 0 / 14%);
+  }
+
+
+
+
+
+  .meio .infoHolder  .edit .menuPostHover{
+    transition: opacity .25s ease-in-out;
+    -moz-transition: opacity .25s ease-in-out;
+    -webkit-transition: opacity .25s ease-in-out;
+  
+    background: #464bc9;
+    border-radius: 80px;
+    height: 100%;
+    width: 100%;
+  
+    position: absolute;
+  
+    opacity: 0; 
+    -moz-opacity: 0;
+  }
+
+
+
+  .meio .infoHolder .edit .menupost li a{
+    display: flex;
+    gap: 0.5rem;
+    color: #DB310C;
+    align-items: center;
+  }
+
+  .meio .infoHolder .edit .menupost li i{
+    font-size: 1.5rem;
+  }
+
+  .meio .infoHolder .edit .menuPostHover:hover{
+    opacity: 0.4;
+  }
+
+
+  .meio .infoHolder  .edit {
+    align-self: center;
+  }
+  
+
+  .meio .infoHolder .edit .editButton{
+    position: relative; 
+    height: 2rem;  
+    width: 2rem; 
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .meio .infoHolder .edit  .editButton:hover{
+    color: #464bc9;
+  }
+  
+  .meio .infoHolder .edit .menuPostHover:hover{
+    opacity: 0.4;
+  }
+  
+  .meio .infoHolder  .edit i{
+    font-size: 1.2rem;
+  }
+  
+
+
+  /* modal editar perfil */
+
+  .perfilUsuario #modal-editar-perfil{
+    width: 650px !important;
+    height: fit-content !important;
+    padding: var(--card-padding) !important;
+    border-radius: var(--card-border-radius) !important;
+  }
+
+
+  .perfilUsuario #modal-editar-perfil .editPerfilHeader{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    height: 3rem;
+    align-items: center;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editPerfilHeader a{
+    font-size: 2.5rem;
+    color: var(--color-dark);
+  }
+
+  .perfilUsuario #modal-editar-perfil .editPerfilHeader .flex-row{
+    width: 15rem;
+    height: 100%;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editPerfilHeader .btn{
+    color: var(--color-dark);
+    font-weight: 600;
+    width: 10rem;
+    height: 40px;
+    font-size: 1.2rem;
+    box-shadow: 0px 6px 12px 0px #00000057;
+    border-radius: 15px;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm{
+    padding: 1rem 2rem;
+    height: 47rem;
+    overflow: auto;
+  }
+
+.perfilUsuario #modal-editar-perfil .editarPerfilForm::-webkit-scrollbar {
+    width: 10px;
+  
+  }
+  
+.perfilUsuario #modal-editar-perfil .editarPerfilForm::-webkit-scrollbar-track {
+    background-color: #14526945;
+    border-radius: 20px;
+  }
+  
+.perfilUsuario #modal-editar-perfil .editarPerfilForm::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: rgba(56, 55, 161, 0.90);
+  }
+  
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .flex-col {
+    width: 100%;
+    height: 5.5rem;
+    margin: 1.5rem 0;
+    gap: 0.5rem;
+  }
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .biografia{
+    height: 12rem;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .biografia textarea{
+    height: 10rem;
+    border-radius: 20px;
+    border: 1px solid gray;
+    padding-inline: 1rem;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+    font-size: 1.1rem;
+    padding: var(--card-padding);
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .biografia textarea:focus{
+    outline: 1px solid gray;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .biografia h4{
+    align-self: flex-end;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .flex-row{
+    margin: 2rem 0;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .text-bold{
+    font-weight: 700;
+    font-size: 1.4rem;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm  input[type="text"]{
+
+    font-family: 'Raleway Bold', sans-serif;
+    font-weight: 600;
+    font-size: 1.1rem;
+
+    height: 100%;
+    border-radius: 20px;
+    border: 1px solid gray;
+    padding-inline: 1rem;
+
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .contagemChar input[type="text"]{
+    border: none;
+    background: none;
+    width: 2rem;
+    padding: 0;
+    margin: 0;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .contagemChar .flex-row{
+    margin: 0;
+  }
+
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm  input[type="text"]::placeholder{
+    font-family: 'Raleway Bold', sans-serif;
+    font-weight: 600;
+    font-size: 1.1rem;
+  }
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm  input[type="text"]:focus{
+    outline: 1px solid gray;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .flex-row .fotoDePerfil{
+    width: 8rem;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .flex-row{
+    position: relative;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .flex-row input[type="file"]{
+    display: none;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .flex-row label.flFotoPerfil{
+    position: absolute;
+    width: 8rem;
+    aspect-ratio: 1/1;
+    border-radius: 80px;
+    cursor: pointer;
+
+    transition: all 300ms ease;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .flex-row label.flFotoPerfil:hover{
+    background: rgb(0 0 0 / 25%);
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .flex-row h2 label.flFotoPerfil2{
+    cursor: pointer;
+    align-self: center;
+  }
+
+  .perfilUsuario #modal-editar-perfil .editarPerfilForm .flex-row h2 {
+    height: fit-content;
+    align-self: center;
+    margin: 0 2rem;
+  }
+
+
+  /* modal crop imagem perfil usuario */
+
+  .perfilUsuario #modal-recortar-foto-perfil{
+    width: 31rem !important;
+    height: 39.5rem !important;
+    padding: var(--card-padding) !important;
+    border-radius: var(--card-border-radius) !important;  
+  }
+
+  .perfilUsuario #modal-recortar-foto-perfil .flex-col{
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+
+  }
+
+  .perfilUsuario #modal-recortar-foto-perfil .flex-col:first-child{
+    font-size: 1.8rem;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    margin: 0.4rem 0;
+  }
+
+  .perfilUsuario #modal-recortar-foto-perfil .flex-col #upload-demo{
+    width: 390px !important;
+
+    overflow: hidden;
+    margin: 1rem 0;
+    border-radius: var(--card-border-radius);
+  }
+
+  .perfilUsuario #modal-recortar-foto-perfil .croppie-container .cr-boundary{
+    height: 395px !important;
+    width: 380px !important;
+
+    border-radius: var(--card-border-radius);
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding: 165px !important;
+
+    border: 1px solid var(--color-gray);
+  }
+
+  .perfilUsuario #modal-recortar-foto-perfil .croppie-container .cr-image{}
 
 .meio .userArea {
   background: var(--color-white);
@@ -106,6 +470,72 @@
   position: relative;
 }
 
+  .meio .subUserBaixo{
+    display: flex;
+    margin-bottom: 1rem;
+
+    align-items: center;
+  }
+
+  .meio .userBaixo .subUserBaixo h2{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .meio .subUserBaixo h4{
+    padding-top: 0.3rem;
+    margin-left: 1rem;
+  }
+  .meio .userBaixo .subUserBaixo a{
+    color: var(--color-purple);
+  }
+
+  .meio .bio{
+    height: fit-content;
+    max-height: 57px;
+    width: 40rem;
+    
+  }
+
+  .meio .bio h4{
+    overflow-wrap: break-word;
+  }
+
+  .meio .addSerPro{
+  height: 60px;
+  width: 100%;
+  border: 1px solid var(--color-lightPastelGray);
+  border-radius: var(--card-border-radius);
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  transition: all 300ms ease;
+  margin-top: 1rem;
+}
+
+.meio .addSerPro:hover{
+  background:rgb(244, 244, 244);
+}
+
+
+.meio .addSerPro h4{
+  font-size: 1.2rem;
+}
+
+.meio .addSerPro .addSerProImg{
+  width: 2.4rem;
+}
+
+  .meio .userTabs{
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 2rem;
+    margin: 0.5rem 0;
+  }
 .meio .topo .btn {
   color: var(--color-dark);
   padding-inline: 1.2rem;
@@ -210,14 +640,18 @@
   justify-content: space-between;
 }
 
-.perfilUsuario #modal-editar-perfil .editPerfilHeader .btn {
+.perfilUsuario #modal-editar-perfil .btn {
   color: var(--color-dark);
   font-weight: 600;
-  width: 10rem;
-  height: 40px;
+  width: 20rem;
+  height: 65px;
   font-size: 1.2rem;
   box-shadow: 0px 6px 12px 0px #00000057;
   border-radius: 15px;
+  align-self: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .perfilUsuario #modal-editar-perfil .editarPerfilForm {
@@ -232,7 +666,8 @@
 }
 
 .perfilUsuario #modal-editar-perfil .editarPerfilForm .biografia {
-  height: 12rem;
+  height: 16rem;
+
 }
 
 .perfilUsuario #modal-editar-perfil .editarPerfilForm .biografia textarea {
@@ -244,6 +679,7 @@
   font-weight: 600;
   font-size: 1.1rem;
   padding: var(--card-padding);
+  overflow: hidden;
 }
 
 .perfilUsuario #modal-editar-perfil .editarPerfilForm .biografia textarea:focus {
@@ -530,9 +966,36 @@
   min-height: 27.9rem;
 }
 
+.produtoServ{
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  cursor: pointer;
+  padding: var(--card-padding);
+  border-radius: var(--card-border-radius);
+}
+
+.produtoServ:hover{
+  background: rgba(0, 0, 0, 0.068);
+}
+
+
+
+.produtoServ h3{
+  width: 15.3rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.produtoServ h4{
+  font-family: "Public Sans Bold", sans-serif;
+}
+
+
 .previewPostImage {
-  width: 14.5rem;
-  height: 13.5rem;
+  width: 15.3rem;
+  height: 16.3rem;
   border: 1px solid gray;
   position: relative;
   border-radius: var(--card-border-radius);
@@ -740,9 +1203,11 @@
   width: 100%;
 }
 
+
+
 #modal-servico-produto h1 {
-  border-bottom: 0.2px solid gray;
-  padding: 0.4rem 0 0.4rem 0;
+
+  padding: var(--btn-padding);
   text-align: center;
 }
 
@@ -751,34 +1216,79 @@
   flex-direction: column;
 }
 
-#modal-servico-produto form input[type="text"],
-#modal-servico-produto form input[type="number"] {
-  border: 1px solid gray;
-  height: 50px;
+#modal-servico-produto form input[type="text"] {
+  border: 1px solid var(--color-lightPastelGray);
+  height: 60px;
   border-radius: 20px;
   padding: 20;
-  width: 90%;
+  width: 100%;
   font-size: 20px;
+  font-family: "Raleway Bold", sans-serif;
+}
+
+#modal-servico-produto form input[type="number"]{
+width: 100%;
+height: 20px;
+font-size: 20px;
+color: black;
+font-family: "Public Sans Bold", sans-serif;
+}
+
+.formElement .precoInput{
+  display: flex;
+  gap: 0.5rem;
+  border: 1px solid var(--color-lightPastelGray);
+  height: 60px;
+  border-radius: 20px;
+  padding: var(--card-padding);
+  width: 100%;
+  font-size: 20px;
+  font-family: "Raleway Bold", sans-serif;
+  align-items: center;
+  padding: 0 1rem;
+  color: gray;
+}
+
+
+#modal-servico-produto form input[type="text"]::placeholder,
+#modal-servico-produto form input[type="number"]::placeholder{
+  font-family: "Raleway Bold", sans-serif;
 }
 
 #modal-servico-produto form textarea{
-  border: 1px solid gray;
+  border: 1px solid var(--color-lightPastelGray);
   height: 120px;
   border-radius: 20px;
   padding: 20;
-  width: 90%;
+  width: 100%;
   font-size: 20px;
   resize: none;
-  font-family: "Raleway Bold", Sans serif;
+  font-family: "Raleway Bold", sans-serif;
 }
 
 #modal-servico-produto form select {
-  height: 50px;
+  font-family: "Raleway Bold", sans-serif;
+  height: 60px;
   font-size: 20px;
-  width: 90%;
+  width: 100%;
   border-radius: 20px;
-  border: 1px solid gray;
+  border: 1px solid var(--color-lightPastelGray);
   padding-left: 20;
+}
+
+#modal-servico-produto form select:disabled{
+  color: gray;
+}
+
+#modal-servico-produto form input[type = "submit"]{
+  width: 375px;
+  font-size: 1.5rem;
+  background: var(--color-pastelYellow);
+}
+
+.previewPostImage{
+  display: flex;
+
 }
 
 #modal-servico-produto form input[type="file"] {
@@ -793,28 +1303,57 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 20px;
+  padding: 2rem 0;
+  border-top: 2px solid var(--color-lightPastelGray);
+  border-bottom: 2px solid var(--color-lightPastelGray);
+  gap: 1.5rem;
+}
+
+.parteInputFoto .inputButtonEstilo{
+  width: 375px;
+  font-size: 1.3rem;
 }
 
 .textArrasteFoto {
-  font-size: 24;
-  padding: 1.4rem;
+  font-size: 24px;
   width: 330px;
   text-align: center;
+}
+
+
+
+.fotoSelecionarImagem #selectFotoIlustracao{
+  border-radius: 20px;
 }
 
 .parteInputInfos {
   display: flex;
   flex-direction: column;
-  padding: 0.85rem 0 0 2.5rem;
+  align-items: center;
+  width: 100%;
+  gap: 1rem;
+}
+.parteInputInfos:first-child{
+  margin-top: 1rem;
+}
+
+.parteInputInfos .formElement{
+  width: 40rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+}
+
+.parteInputInfos .formElement span{
+  font-size: 1.3rem;
 }
 
 .parteInputSubmit{
   display: flex;
   justify-content: center;
-  padding: 1.5rem;
-  margin-bottom: 10px;
+  margin: 1.5rem 0;
 }
+
 
 #divisaoPartes{
   width: 100%;
@@ -826,4 +1365,87 @@
   height: 945px !important;
   padding: 0px !important;
   width: 750px !important;
+  padding: var(--card-padding) !important;
+  overflow: auto;
+}
+
+
+
+/* MODAL DE RECORTAR IMAGEM EMPRESA*/
+#modal-recorte-empresa{
+    width: 37rem !important;
+    height: 43.5rem !important;
+    border-radius: var(--card-border-radius) !important;
+}
+
+.modal-recorte-empresaInner{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  align-items: center;
+  gap: 1rem;
+}
+
+
+
+.modal-recorte-empresaInner .btn{
+  width: 30.1rem;
+  height: 3.5rem;
+  font-size: 1.4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 5px 5px 10px rgb(0 0 0 / 25%);
+  margin-top: 1rem;
+}
+#modal-recorte-empresa h1{
+  margin: 0.8rem;
+}
+
+#modal-recorte-empresa .croppie-container .cr-boundary {
+  height: 445px !important;
+  width: 480px !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 165px !important;
+  border: 1px solid var(--color-gray);
+  border-radius: var(--card-border-radius);
+}
+
+#modal-recorte-empresa .croppie-container .cr-viewport{
+  left: unset;
+  right: unset;
+  top: unset;
+  bottom: unset;
+  border: 2px solid var(--color-gray) !important;
+}
+
+#modal-recorte-empresa .croppie-container{
+  width: 585px !important;
+  height: 500px !important;
+}
+
+#modal-recorte-empresa .croppie-container .cr-slider {
+  display: unset !important;
+  width: 100% !important;
+}
+
+#modal-recorte-empresa .croppie-container input[type=range]::-webkit-slider-runnable-track {
+  background: var(--color-pastelDark);
+
+}
+
+#modal-recorte-empresa .croppie-container .cr-slider-wrap {
+  display: flex;
+  width: 480px !important;
+  height: 40px;
+
+
+  border-radius: var(--card-border-radius);
+  padding-inline: 15px;
+
+  border: rgb(146 139 139) solid 2px;
+  background: rgb(35 35 40 / 24%);
+
 }
