--- a/assets/css/feed-style.css
+++ b/assets/css/feed-style.css
@@ -1193,7 +1193,7 @@ border: none;
 }
 
 .ladoDireito .whiteBoxHolder .categorias .lugar .infoCategoria {
-  margin: 0 0.7rem;
+  margin-left: 0.6rem;
   width: 100%;
   overflow: hidden;
   cursor: pointer;
@@ -2255,17 +2255,19 @@ border: none;
   background: rgba(0, 0, 0, 0.1);
 }
 
-#modal-denuncia .botoesDenuncia .cancelar {
+.botoesDenuncia .cancelar {
   transition: all 300ms ease;
-  border: 1px var(--color-pastelDark) solid;
-  color: black;
-  background: var(--color-white);
-  box-shadow: 4px 3px 10px rgba(0, 0, 0, 0.25);
+  border: 1px var(--color-pastelDark) solid !important;
+  color: black !important;
+  background: var(--color-white) !important;
+  box-shadow: 4px 3px 10px rgba(0, 0, 0, 0.25) !important;
 }
 
-#modal-denuncia .botoesDenuncia .cancelar:hover {
-  background: rgba(0, 0, 0, 0.1);
+.botoesDenuncia .cancelar:hover {
+  background: rgba(0, 0, 0, 0.1) !important;
 }
+
+
 
 .opcoes-certeza-excluir .excluir {
   transition: all 300ms ease;
