--- a/assets/css/opcoes-style.css
+++ b/assets/css/opcoes-style.css
@@ -165,6 +165,7 @@
 
   .meio .opcoesHolder .tabholder .imageHandler .flex-col{
     gap: 0.5rem;
+    width: 23rem;
   }
 
 .meio .opcoesHolder .tabholder .imageHandler input[type="file"] {
@@ -221,7 +222,9 @@ transition: all 300ms ease;
   gap: 0.5rem;
 }
 
-.meio .opcoesHolder .tabholder .informacoes .infoArea input[type="text"]{
+.meio .opcoesHolder .tabholder .informacoes .infoArea input[type="text"], 
+.meio .opcoesHolder .tabholder .informacoes .infoArea select,
+.meio .opcoesHolder .tabholder .informacoes .infoArea input[type="number"]{
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
   font-size: 1rem;
@@ -229,6 +232,10 @@ transition: all 300ms ease;
   border-radius: 20px;
   border: 1px solid gray;
   padding-inline: 1rem;
+}
+
+.meio .opcoesHolder .tabholder .informacoes .infoArea input[type="number"]{
+  width: 70%;
 }
 
 
