Co-authored-by: lean-dro <lean-dro@users.noreply.github.com> Co-authored-by: Marina Oliveira <m-arina@users.noreply.github.com> Co-authored-by: hCwai <hCaua@users.noreply.github.com>

--- a/assets/css/paraVoce-style.css
+++ b/assets/css/paraVoce-style.css
@@ -45,7 +45,8 @@
     position: absolute;
     right: 0;
     bottom: 0;
-    width: 16rem;
+    top: 0.1;
+    width: 15rem;
   }
 
   .meio .paraVoceDisc .h4Holder{
