--- a/private-adm/dashboard/pages/denuncias/denuncias.css
+++ b/private-adm/dashboard/pages/denuncias/denuncias.css
@@ -475,6 +475,7 @@ main .info-pets .perfis-pets {
     border-color: #677483;
     padding: 20px;
     gap: 25px;
+    margin-top: 1rem;
 }
 
 
@@ -508,6 +509,7 @@ main .info-pets .perfis-pets {
 }
 
 .foto-info {
+    border-radius: 1rem;
     width: 70px;
 }
 
@@ -516,12 +518,12 @@ main .info-pets .perfis-pets {
     padding: 15px;
     text-align: center;
     border-radius: 15px;
-    color: white;
+    color: black;
     font-weight: bolder;
 }
 
 .analisar {
-    background-color: #FBD3A4;
+    background-color: #FEC684;
 }
 
 .analisar-agora {
@@ -733,13 +735,9 @@ main .info-pets .perfis-pets {
 }
 
 .denunciasPublicacao{
-    margin-top: 10px;
-}
-
-.denunciasPublicacao{
     display: flex;
-    gap: 10px;
-    justify-content: center;
+    gap: 1rem;
+    margin-top: 10px;
 }
 
 .modal a.close-modal{
